# edu_cpp_server_programming

./: LICENSE  README.md
CSharp_OmokClient/: App.config  OmokBoard.cs  OmokClient.csproj  OmokClient.sln  OmokRule.cs  PacketBufferManager.cs  PacketID.cs  PacketProcessForm.cs  mainForm.Designer.cs  mainForm.cs
CSharp_OmokClient/CSCommon/: CSErrorCode.cs  FastBinaryRead.cs  OmokRule.cs  PacketDatas.cs  PacketHeader.cs  PacketID.cs
ChatClient/: AI.cs  ClientSimpleTcp.cs  OmokBoard.cs  Packet.cs  PacketDefine.cs  PacketProcessForm.cs  csharp_test_client.csproj  mainForm.Designer.cs  mainForm.cs
ChatClient/Properties/: Resources.Designer.cs
IOCP/IocpNetLib/: CommonDefine.h  Connection.h  IOCPServerNet.h  Lock.h  MessagePool.h  MiniDump.h  NetDefine.h  NetLib.vcxproj  NetLib.vcxproj.filters  Performance.h  RecvRingBuffer.h  RingBuffer.h  SendRingBuffer.h
IOCP/IocpNetLib_Echo/: ConsoleHost.cpp  EchoConsoleHost.sln  EchoConsoleHost.vcxproj  EchoConsoleHost.vcxproj.filters  EchoServer.h
IOCP/IocpNetLib_IocpChatServer/: sequence_로그인.puml  sequence_방 채팅.puml  sequence_방나가기.puml  sequence_방입장.puml
IOCP/nhn_next_IocpServer/: README.md  코드 흐름.xlsx
IOCP_ReWork/GameProject3Re/: coding_rule.md  코드흐름.xlsx
IOCP_ReWork/GameProject3Re/ServerEngine/: CMakeLists.txt  CommandDef.h  CommonConvert.h  CommonFunc.h  CommonMath.h  ConfigFile.h  Connection.h  CrashReport.h  DataBuffer.h  IBufferHandler.h  Log.h  Platform.h  ServiceBase.h  WindowsDump.h
IOCP_ReWork/MyTestServer-master/: MyTestServer.sln
IOCP_ReWork/NFGDK/: README.md
IOCP_ReWork/ReMyeonggyuIOCP/: README.md
IOCP_ReWork/SmogCity_Server-master/: .gitignore  README.md
RIO_rioring/: README.md
RIO_rioring/chatServer/: CMakeLists.txt  chatServer.sln  chatServer.vcxproj  chatServer.vcxproj.filters  client.cpp  client.h  main.cpp  pool.cpp  pool.h  receiver.cpp  receiver.h  scheme.h
SelectChatServer/: README.md  시퀸스 다이얼그램.xlsx
SelectChatServer/ChatServer2/ConsoleHost/: CMakeLists.txt  ConsoleHost.sln  ConsoleHost.vcxproj  main.cpp
SelectChatServer/ChatServer2/LogicLib/: CMakeLists.txt  ConnectedUserManager.h  ConsoleLogger.h  Game.cpp  Game.h  Lobby.cpp  Lobby.h  LobbyManager.cpp  LobbyManager.h  LogicLib.sln  LogicLib.vcxproj  LogicLib.vcxproj.filters  Main.cpp  Main.h  PacketProcess.cpp  PacketProcess.h  PacketProcessLobby.cpp  PacketProcessLogin.cpp  PacketProcessRoom.cpp  Room.cpp  Room.h  User.h  UserManager.cpp  UserManager.h
SelectChatServer/ChatServer2/ServerNetLib/: CMakeLists.txt  Define.h  ILog.h  ServerNetLib.sln  ServerNetLib.vcxproj  ServerNetLib.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h
SyncIOChatServer/: ChatServer.cpp  ChatServer.h  ErrorCode.h  Packet.h  PacketProcess.cpp  PacketProcess.h  SyncIOChatServer.sln  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  TcpSession.h  main.cpp
SyncIOChatServer_1/: ChatServer.cpp  ChatServer.h  Define.h  ErrorCode.h  PacketProcess.cpp  PacketProcess.h  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  TcpSession.h  main.cpp
SyncIOChatServer_2/: ChatServer.cpp  ChatServer.h  Define.h  ErrorCode.h  ITcpNetwork.h  PacketID.h  PacketProcess.cpp  PacketProcess.h  SyncIOChatServer.sln  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  main.cpp
SyncIOChatServer_3/: ChatServer.h  Define.h  ErrorCode.h  Omok.cpp  OmokLogic.cpp  OmokLogic.h  Packet.h  PacketDef.h  PacketID.h  PacketProcess.cpp  PacketProcess.h  PacketProcessLogin.cpp  PacketProcessRoom.cpp  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  TcpSession.h  User.h  UserManager.cpp  UserManager.h  main.cpp
SyncIOOmokGameServer_1/: ChatServer.cpp  ChatServer.h  Define.h  ErrorCode.h  Omok.cpp  Omok.h  OmokLogic.cpp  OmokLogic.h  OmokPanPoint.h  OmokServer.cpp  OmokServer.h  Packet.cpp  PacketDef.h  PacketID.h  PacketProcess.cpp  PacketProcess.h  PacketProcessGame.cpp  PacketProcessGamePut.cpp  PacketProcessGameReady.cpp  PacketProcessLogin.cpp  PacketProcessMatch.cpp  PacketProcessRoom.cpp  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.h  User.h  UserManager.cpp  UserManager.h  main.cpp
SyncIOOmokGameServer_2/: ChatServer.cpp  ChatServer.h  Define.h  Omok.cpp  Omok.h  PacketDef.h  PacketProcess.h  PacketProcessGamePut.cpp  PacketProcessGameReady.cpp  PacketProcessMatch.cpp  PacketProcessRoom.cpp  Room.h  RoomManager.cpp  RoomManager.h  SyncIOChatServer.vcxproj  SyncIOChatServer.vcxproj.filters  TcpNetwork.cpp  TcpNetwork.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  main.cpp
acl/: README.md  acl_fiber ko.pptx  build.md  faq.md  samples.md  use_vs2022.md  version_3.6.1-3.txt
acl-beginner/: README.md
acl-beginner/HttpAcl/: pch.h  (+11 more)
book_codes/: README.md
libuvNetLib/: README.md
(+4211 files in other folders)
